tests/expected_output/h_file_not_found/000000-clang-14.0-x86_64-pc-linux-gnu.txt
h_file_not_found.c:1:10: fatal error: 'studio.h' file not found
#include <studio.h>
         ^~~~~~~~~~
dcc explanation: you are attempting to #include a file which does not exist.
Did you mean: '#include <stdio.h>'
